--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,8 @@ services:
          container_name: reactapp
          ports:
                  - 80:3000
+         volumes:
+                 - '.:/app'
+                 - '/app/node_modules'
+         environment:
+                 - CHOKIDAR_USEPOLLING=true
