--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,31 @@
+#version: '3.1'
+
+#services:
+# reactapp:
+#        image: reactapp:v1
+#         container_name: reactapp
+#         ports:
+#                 - 80:3000
+#         volumes:
+#                 - '.:/reactapp'
+#                 - '/reactapp/node_modules'
+#         environment:
+#                 - CHOKIDAR_USEPOLLING=true
+
 version: '3.1'
 
 services:
-
- reactapp:
-         image: reactapp:v1
-         container_name: reactapp
-         ports:
-                 - 80:3000
-         volumes:
-                 - '.:/app'
-                 - '/app/node_modules'
-         environment:
-                 - CHOKIDAR_USEPOLLING=true
+    react:
+        image: reactapp:v1
+        container_name: react
+        volumes:
+            - ../app:/usr/src/app
+        networks:
+            my-network:
+                aliases:
+                    - app
+        expose:
+            - 3000
+        ports:
+            - "3000:3000"
+        stdin_open: true
