--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,31 +1,16 @@
-#version: '3.1'
-
-#services:
-# reactapp:
-#        image: reactapp:v1
-#         container_name: reactapp
-#         ports:
-#                 - 80:3000
-#         volumes:
-#                 - '.:/reactapp'
-#                 - '/reactapp/node_modules'
-#         environment:
-#                 - CHOKIDAR_USEPOLLING=true
-
-version: '3.1'
+version: '3.7'
 
 services:
-    react:
-        image: reactapp:v1
-        container_name: react
-        volumes:
-            - ../app:/usr/src/app
-        networks:
-            my-network:
-                aliases:
-                    - app
-        expose:
-            - 3000
-        ports:
-            - "3000:3000"
-        stdin_open: true
+
+  sample:
+    container_name: sample
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - '.:/app'
+      - '/app/node_modules'
+    ports:
+      - 80:3000
+    environment:
+      - CHOKIDAR_USEPOLLING=true
