--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   sample:
-    container_name: sample
+    container_name: reactapp
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,3 +14,5 @@ services:
       - 80:3000
     environment:
       - CHOKIDAR_USEPOLLING=true
+    stdin_open: true
+    tty: true
