--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
 
   sample:
     container_name: reactapp
-    image: react:v1
+    image: react_dev:v1
     volumes:
       - '.:/app'
       - '/app/node_modules'
